src/objects/SBQQ__LineColumn__c.object
<CustomObject>
    <fields>
        <fullName>cpqma_ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>CPQ External Id</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SectionExternalId__c</fullName>
        <formula>SBQQ__Section__r.cpqma_ExternalId__c</formula>
        <label>SectionExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TemplateExternalId__c</fullName>
        <formula>SBQQ__Template__r.cpqma_ExternalId__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TemplateExternalId</label>
        <type>Text</type>
    </fields>
</CustomObject>